# digital-ad-campaign-roi-forecaster

./: .env.example  .flake8  .gitignore  LICENSE  README.md  ci_test.py  demo_data_workflow.py  pyproject.toml  requirements.txt  test_data_module.py  test_forecasting_module.py  test_visualization_module.py
.github/workflows/: lint-and-test.yml
ad_roi_forecaster/: __init__.py
ad_roi_forecaster/cli/: __main__.py  cli.py
ad_roi_forecaster/data/: README.md  __init__.py  loader.py  schemas.py  validator.py
ad_roi_forecaster/forecasting/: README.md  __init__.py  baseline.py  model_selector.py  time_series.py
ad_roi_forecaster/optimization/: roi_optimizer.py
ad_roi_forecaster/visualization/: __init__.py  plots.py  report.py
config/: __init__.py  settings.py
docs/: DOCUMENTATION_SUMMARY.md  README.md  USAGE.md  architecture.md  architecture_diagram.py
results/: forecast_results.csv  optimization_results.csv
sample_data/: campaign_data.csv  sample_campaigns.csv
tests/: conftest.py  test_cli_module.py  test_data_module.py  test_forecasting_module.py  test_optimization_module.py  test_visualization_module.py
