[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ad_roi_forecaster", "config"]

[project]
name = "digital-ad-campaign-roi-forecaster"
version = "0.1.0"
description = "A tool for forecasting ROI of digital advertising campaigns"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "pydantic-settings",
    "click",
    "rich",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black>=24.8.0",
    "flake8>=5.0.4",
    "mypy",
]

[project.scripts]
ad-roi-forecaster = "ad_roi_forecaster.cli.cli:cli"
forecast-roi = "ad_roi_forecaster.cli.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
